--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
   margin-bottom: 1.5rem;
 }
 .tour-price {
-  color: var(--clr-primary-5);
-  background: var(--clr-primary-10);
+  color:rgb(14, 126, 126);
+ background: rgb(199, 192, 192);
   padding: 0.25rem 0.5rem;
   border-radius: var(--radius);
 }
@@ -29,20 +29,45 @@
   background: transparent;
   border-color: transparent;
   text-transform: capitalize;
-  color: var(--clr-primary-5);
+  color: rgb(27, 206, 206);
   font-size: 1rem;
   cursor: pointer;
   padding-left: 0.25rem;
 }
 .single-tour img {
-  width: 50%;
+  width: 100%;
   height: 20rem;
   object-fit: cover;
 }
 .single-tour footer {
   padding: 1.5rem 2rem;
 }
+.single-tour .delete-btn {
+  display: block;
+  width: 300px;
+  color:black;
+  margin: 1rem auto 0 auto;
+  padding: 0.25rem 0.5rem;
+  border: 5px solid rgba(204, 5, 5, 0.486);
+  border-radius: 5px;
 
+}
+
+@media screen and (min-width: 992px) {
+  .section {
+    width: 95vw;
+  }
+}
+@media screen and (max-width: 768px) {
+  .single-tour img {
+    width: 50%;
+    height: 20rem;
+    object-fit: cover;
+  }
+  .section {
+    width: 50vw;
+  }
+}
 
 
 
